# dsv4-cc-proxy-tray

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-05-11-publishing-pipeline-design.md
dsv4_cc_proxy/: __main__.py  gui.py  proxy.py
promotional/: csdn.md  hackernews.md  juejin.md  reddit.md  v2ex.md
scripts/: build_exe.bat  start_gui.bat
tests/: test_proxy.py
