[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dsv4-cc-proxy-tray"
description = "DeepSeek V4 Claude Code proxy with Windows GUI tray — 一键启动，无需终端"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["deepseek", "claude", "proxy", "anthropic", "api"]
authors = [{name = "HosheaLi"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
]
dynamic = ["version"]

dependencies = [
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Friend-Xu/dsv4-cc-proxy"
Source = "https://github.com/Friend-Xu/dsv4-cc-proxy"
Documentation = "https://hosheali.github.io/P14_dsv4ToCC"

[project.scripts]
dsv4-cc-proxy = "dsv4_cc_proxy.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "dsv4_cc_proxy._version.VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["dsv4_cc_proxy*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
